ChangeLog

Name: William Lai
Date: 01-01-2014
Description: Implemented Loser's Chess
    * src/chess/ComputerPlayer.java: Added AI logic for Loser's Chess
    * src/chess/Definitions.java: Made isAttacked function more flexible
    * src/chess/HumanPlayer.java: Now handles Loser's Chess move selections
    * src/chess/StandardChessBoard.java: Moved all of processMove into StandardChessBoard from StandardChessGame
    * src/chess/StandardChessGame.java: Moved all of processMove into StandardChessBoard from StandardChessGame
    * src/chess/LosersChessBoard.java: Board for Loser's Chess
    * src/chess/LosersChessGame.java: Game for Loser's Chess
    * src/chess/Main.java: New class for running as standalone app (since there are now multiple game choices)

Name: Vincent Wong
Date: 12-31-2013
Description: Added simple background, made undo button prettier
    * src/Images/buttonUndo*: Prettier undo buttons
    * src/chess/StandardChessGameGraphics.java: Added code for painting an app background
    * src/chess/StandardChessGame.java: Added code to call painting an app background
    * src/chess/EasyButton.java: Made clicking a proper two step process, with a different
    image on each stage
    * src/chess/StandardChessGameGUI.java: Added code to properly use the tweaked EasyButton,
    along with a focuslistener to properly deal with lost focus
    

Name: William Lai
Date: 12-31-2013
Description: Cleaned up undo function
    * src/chess/StandardChessGame.java: Undo function is disabled during a CPU player's turn and also disables the instant the player has clicked a destination square (to prevent strange situations where two moves are undone but the player's move was also processed and the moving piece changed colors).

Name: Eric Du
Date: 12-29-2013
Description: Implemented the undo function
    * src/chess/StandardChessBoard.java: Added a function to decrement turn count when undoing