@@ -1,0 +1,8 @@
+package chess;
+
+import java.awt.event.*;
+
+abstract public class GameGUI implements MouseListener, FocusListener
+{
+	
+}
