@@ -1,0 +1,12 @@
+package chess;
+
+import javax.swing.JPanel;
+
+@SuppressWarnings("serial")
+public abstract class GameGraphics extends JPanel
+{
+	protected GameApplet m_applet;
+	
+	abstract public void init(Game game);
+	abstract GameGUI getGUI();
+}
